feat: list products docs
